feature: add social media icons in footer

--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/018d4387f7.js" crossorigin="anonymous"></script>   
   </body>
 </html>
